[gd_scene load_steps=12 format=2]

[ext_resource path="res://Resources/GreenSpringField_TM.tres" type="TileSet" id=1]
[ext_resource path="res://Objects/AnimatedObjects/Water.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/Interactables/BoxButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Interactables/ShieldInfo.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Levels/TestLevel/TesteLevel.gd" type="Script" id=5]
[ext_resource path="res://Resources/Dialogue_TM.tres" type="TileSet" id=6]
[ext_resource path="res://Objects/Interactables/PushableBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Objects/Interactables/Button.tscn" type="PackedScene" id=8]
[ext_resource path="res://Objects/Characters/Player.tscn" type="PackedScene" id=9]
[ext_resource path="res://Objects/Interactables/PortalRight.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 352.64, 81.3848 )

[node name="TestLevel" type="Node2D"]
position = Vector2( 56.0633, 209.57 )
script = ExtResource( 5 )

[node name="Player" parent="." instance=ExtResource( 9 )]
position = Vector2( -19.3641, 34.5914 )

[node name="DeathZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
modulate = Color( 1, 0, 0.701961, 1 )
position = Vector2( 164.314, 146.695 )
shape = SubResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
format = 1
tile_data = PoolIntArray( -917508, 27, 0, -917505, 25, 0, -983040, 26, 0, -983039, 26, 0, -983038, 26, 0, -983037, 26, 0, -983036, 26, 0, -983035, 26, 0, -983034, 26, 0, -983033, 26, 0, -983032, 26, 0, -983031, 26, 0, -983030, 26, 0, -983029, 27, 0, -983014, 25, 0, -851972, 27, 0, -851969, 25, 0, -917504, 26, 0, -917503, 26, 0, -917502, 26, 0, -917501, 26, 0, -917500, 26, 0, -917499, 26, 0, -917498, 26, 0, -917497, 26, 0, -917496, 26, 0, -917495, 26, 0, -917494, 26, 0, -917493, 27, 0, -917478, 25, 0, -786436, 27, 0, -786433, 25, 0, -851968, 26, 0, -851967, 26, 0, -851966, 26, 0, -851965, 26, 0, -851964, 26, 0, -851963, 26, 0, -851962, 26, 0, -851961, 26, 0, -851960, 26, 0, -851959, 26, 0, -851958, 26, 0, -851957, 27, 0, -851942, 25, 0, -720900, 27, 0, -720897, 29, 0, -786432, 30, 0, -786431, 30, 0, -786430, 30, 0, -786429, 30, 0, -786428, 37, 0, -786427, 26, 0, -786426, 26, 0, -786425, 26, 0, -786424, 26, 0, -786423, 26, 0, -786422, 26, 0, -786421, 27, 0, -786406, 25, 0, -655364, 27, 0, -720892, 25, 0, -720891, 26, 0, -720890, 26, 0, -720889, 26, 0, -720888, 26, 0, -720887, 26, 0, -720886, 26, 0, -720885, 27, 0, -720870, 25, 0, -589828, 27, 0, -655356, 25, 0, -655355, 26, 0, -655354, 26, 0, -655353, 26, 0, -655352, 26, 0, -655351, 26, 0, -655350, 26, 0, -655349, 27, 0, -655334, 25, 0, -524292, 27, 0, -589820, 29, 0, -589819, 30, 0, -589818, 30, 0, -589817, 30, 0, -589816, 30, 0, -589815, 30, 0, -589814, 30, 0, -589813, 31, 0, -589798, 25, 0, -458756, 74, 0, -458755, 7, 0, -524283, 60, 0, -524279, 61, 0, -524262, 25, 0, -393220, 26, 0, -393219, 27, 0, -458747, 62, 0, -458743, 65, 0, -458726, 29, 0, -327684, 26, 0, -327683, 27, 0, -393211, 64, 0, -262148, 26, 0, -262147, 27, 0, -196612, 26, 0, -196611, 27, 0, -262130, 70, 0, -262129, 95, 0, -262128, 70, 0, -262127, 67, 0, -262126, 92, 0, -131076, 26, 0, -131075, 27, 0, -196595, 21, 0, -196594, 22, 0, -196593, 22, 0, -196592, 22, 0, -196591, 22, 0, -196590, 23, 0, -196582, 5, 0, -65540, 26, 0, -65539, 27, 0, -131067, 82, 0, -131066, 67, 0, -131064, 67, 0, -131063, 89, 0, -131059, 25, 0, -131058, 36, 0, -131057, 30, 0, -131056, 30, 0, -131055, 37, 0, -131054, 27, 0, -131046, 25, 0, -4, 30, 0, -3, 31, 0, -65531, 21, 0, -65530, 22, 0, -65529, 22, 0, -65528, 22, 0, -65527, 23, 0, -65523, 25, 0, -65522, 27, 0, -65521, 61, 0, -65519, 25, 0, -65518, 27, 0, -65517, 67, 0, -65516, 67, 0, -65515, 69, 0, -65513, 91, 0, -65510, 25, 0, 65532, 80, 0, 5, 25, 0, 6, 26, 0, 7, 26, 0, 8, 26, 0, 9, 27, 0, 13, 25, 0, 14, 27, 0, 15, 63, 0, 17, 25, 0, 18, 74, 0, 19, 22, 0, 20, 22, 0, 21, 22, 0, 22, 22, 0, 23, 23, 0, 24, 1, 0, 25, 11, 0, 26, 25, 0, 131068, 80, 0, 65540, 42, 0, 65541, 25, 0, 65542, 26, 0, 65543, 26, 0, 65544, 26, 0, 65545, 27, 0, 65549, 25, 0, 65550, 27, 0, 65551, 65, 0, 65553, 25, 0, 65554, 26, 0, 65555, 26, 0, 65556, 26, 0, 65557, 26, 0, 65558, 26, 0, 65559, 27, 0, 65562, 25, 0, 196604, 80, 0, 196607, 53, 0, 131072, 66, 0, 131073, 70, 0, 131074, 67, 0, 131075, 42, 0, 131076, 40, 0, 131077, 25, 0, 131078, 26, 0, 131079, 26, 0, 131080, 26, 0, 131081, 27, 0, 131085, 25, 0, 131086, 27, 0, 131089, 25, 0, 131090, 26, 0, 131091, 26, 0, 131092, 26, 0, 131093, 26, 0, 131094, 26, 0, 131095, 27, 0, 131098, 25, 0, 262140, 74, 0, 262141, 22, 0, 262142, 22, 0, 262143, 22, 0, 196608, 22, 0, 196609, 22, 0, 196610, 22, 0, 196611, 22, 0, 196612, 22, 0, 196613, 75, 0, 196614, 26, 0, 196615, 26, 0, 196616, 26, 0, 196617, 27, 0, 196621, 25, 0, 196622, 74, 0, 196623, 22, 0, 196624, 22, 0, 196625, 75, 0, 196626, 26, 0, 196627, 26, 0, 196628, 26, 0, 196629, 26, 0, 196630, 26, 0, 196631, 27, 0, 196634, 25, 0, 327676, 26, 0, 327677, 26, 0, 327678, 26, 0, 327679, 26, 0, 262144, 26, 0, 262145, 26, 0, 262146, 26, 0, 262147, 26, 0, 262148, 26, 0, 262149, 26, 0, 262150, 26, 0, 262151, 26, 0, 262152, 26, 0, 262153, 27, 0, 262157, 25, 0, 262158, 26, 0, 262159, 26, 0, 262160, 26, 0, 262161, 26, 0, 262162, 26, 0, 262163, 26, 0, 262164, 26, 0, 262165, 26, 0, 262166, 26, 0, 262167, 27, 0, 262170, 25, 0, 393212, 26, 0, 393213, 26, 0, 393214, 26, 0, 393215, 26, 0, 327680, 26, 0, 327681, 26, 0, 327682, 26, 0, 327683, 26, 0, 327684, 26, 0, 327685, 26, 0, 327686, 26, 0, 327687, 26, 0, 327688, 26, 0, 327689, 27, 0, 327693, 25, 0, 327694, 26, 0, 327695, 26, 0, 327696, 26, 0, 327697, 26, 0, 327698, 26, 0, 327699, 26, 0, 327700, 26, 0, 327701, 26, 0, 327702, 26, 0, 327703, 27, 0, 327706, 25, 0 )

[node name="PushableBox" parent="." instance=ExtResource( 7 )]
position = Vector2( 360.833, -23.0309 )

[node name="Button" parent="." instance=ExtResource( 8 )]
position = Vector2( 115.639, -23.9921 )

[node name="TileMap2" type="TileMap" parent="."]
visible = false
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( -131060, 32, 0, 10, 32, 0, 11, 33, 0, 12, 35, 0 )

[node name="PortalRight" parent="." instance=ExtResource( 10 )]
position = Vector2( -40.0005, 24.0034 )

[node name="PortalLeft" parent="." instance=ExtResource( 10 )]
position = Vector2( 424.015, -71.9987 )

[node name="Water" parent="." instance=ExtResource( 2 )]
position = Vector2( 168.008, 33.8521 )

[node name="BoxButton" parent="." instance=ExtResource( 3 )]
position = Vector2( 333.014, -7.99667 )

[node name="ShieldInfo" parent="." instance=ExtResource( 4 )]
position = Vector2( 260.713, -55.9801 )

[node name="DialogueBox" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -131074, 0, 0, -131073, 1, 0, -196608, 1, 0, -196607, 1, 0, -196606, 1, 0, -196605, 1, 0, -196604, 1, 0, -196603, 1, 0, -196602, 1, 0, -196601, 1, 0, -196600, 1, 0, -196599, 1, 0, -196598, 1, 0, -196597, 1, 0, -196596, 1, 0, -196595, 1, 0, -196594, 1, 0, -196593, 1, 0, -196592, 1, 0, -196591, 1, 0, -196590, 1, 0, -196589, 1, 0, -196588, 1, 0, -196587, 1, 0, -196586, 1, 0, -196585, 1, 0, -196584, 2, 0, -65538, 7, 0, -65537, 17, 0, -131072, 14, 0, -131071, 8, 0, -131070, 9, 0, -131069, 8, 0, -131068, 11, 0, -131067, 26, 0, -131066, 9, 0, -131065, 28, 0, -131064, 13, 0, -131063, 8, 0, -131062, 17, 0, -131061, 27, 0, -131060, 8, 0, -131059, 27, 0, -131058, 28, 0, -131057, 29, 0, -131056, 11, 0, -131055, 19, 0, -131054, 8, 0, -131053, 24, 0, -131052, 26, 0, -131051, 13, 0, -131050, 27, 0, -131049, 27, 0, -131048, 3, 0, -2, 7, 0, -1, 3, 0, -65536, 14, 0, -65535, 7, 0, -65534, 28, 0, -65533, 23, 0, -65532, 8, 0, -65531, 13, 0, -65530, 20, 0, -65529, 13, 0, -65528, 30, 0, -65527, 9, 0, -65526, 28, 0, -65525, 13, 0, -65524, 8, 0, -65523, 17, 0, -65522, 28, 0, -65521, 8, 0, -65520, 8, 0, -65519, 8, 0, -65518, 8, 0, -65517, 8, 0, -65516, 8, 0, -65515, 8, 0, -65514, 8, 0, -65513, 8, 0, -65512, 3, 0, 65534, 7, 0, 65535, 8, 0, 0, 8, 0, 1, 8, 0, 2, 8, 0, 3, 8, 0, 4, 8, 0, 5, 8, 0, 6, 8, 0, 7, 8, 0, 8, 8, 0, 9, 8, 0, 10, 8, 0, 11, 8, 0, 12, 8, 0, 13, 8, 0, 14, 8, 0, 15, 8, 0, 16, 8, 0, 17, 8, 0, 18, 8, 0, 19, 8, 0, 20, 8, 0, 21, 8, 0, 22, 8, 0, 23, 8, 0, 24, 3, 0, 131070, 7, 0, 131071, 8, 0, 65536, 8, 0, 65537, 8, 0, 65538, 8, 0, 65539, 8, 0, 65540, 8, 0, 65541, 8, 0, 65542, 8, 0, 65543, 8, 0, 65544, 8, 0, 65545, 8, 0, 65546, 8, 0, 65547, 8, 0, 65548, 8, 0, 65549, 8, 0, 65550, 8, 0, 65551, 8, 0, 65552, 8, 0, 65553, 8, 0, 65554, 8, 0, 65555, 8, 0, 65556, 8, 0, 65557, 8, 0, 65558, 8, 0, 65559, 8, 0, 65560, 3, 0, 196606, 6, 0, 196607, 5, 0, 131072, 5, 0, 131073, 5, 0, 131074, 5, 0, 131075, 5, 0, 131076, 5, 0, 131077, 5, 0, 131078, 5, 0, 131079, 5, 0, 131080, 5, 0, 131081, 5, 0, 131082, 5, 0, 131083, 5, 0, 131084, 5, 0, 131085, 5, 0, 131086, 5, 0, 131087, 5, 0, 131088, 5, 0, 131089, 5, 0, 131090, 5, 0, 131091, 5, 0, 131092, 5, 0, 131093, 5, 0, 131094, 5, 0, 131095, 5, 0, 131096, 4, 0 )
[connection signal="body_entered" from="DeathZone" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Button" to="." method="_on_Button_body_entered"]
[connection signal="body_entered" from="BoxButton" to="." method="_on_BoxButton_body_entered"]
[connection signal="body_exited" from="BoxButton" to="." method="_on_BoxButton_body_exited"]
[connection signal="body_entered" from="ShieldInfo" to="." method="_on_ShieldInfo_body_entered"]
[connection signal="body_exited" from="ShieldInfo" to="." method="_on_ShieldInfo_body_exited"]
